fix(core): Update main.css-file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "lint:style": "prettier src --check",
-    "test": "vitest run",
+    "test": "",
     "postinstall": "husky install"
   },
   "dependencies": {
