--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{html,json,css}": "prettier --write",
+  "*.{html,json,css,scss}": "prettier --write",
   "*.{ts,tsx}": ["prettier --write", "eslint --fix"]
 }
