--- a/package.json
+++ b/package.json
@@ -45,9 +45,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "msw": "^2.3.4",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vitest": "^0.31.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
