--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-redux": "^7.1.33",
     "antd": "^5.19.3",
     "buffer": "^6.0.3",
     "less": "^4.2.0",
