--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 VITE_APP_VERSION=v1.0.0
 VITE_APP_RELEASES_LINK=https://github.com/
 VITE_APP_GITHUB_LINK=https://github.com/
+VITE_API_ENDPOINT=http://localhost:4000
